[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "verbecc"
version = "1.11.0"
dependencies = [
  "cython>=3.1.4",
  "importlib_resources==6.4.5 ; python_version < '3.13'",
  "importlib_resources==6.5.2 ; python_version >= '3.13'",
  "lxml>=6.0.2",
  "lxml-stubs>=0.5.1",
  "numpy==1.6.1 ; python_version < '3.13'",
  "numpy==2.3.3 ; python_version >= '3.13'",
  "scikit-learn==1.6.1 ; python_version < '3.13'",
  "scikit-learn==1.7.2 ; python_version >= '3.13'",
  "scipy==1.13.1 ; python_version < '3.13'",
  "scipy==1.14.1 ; python_version == '3.13'",
  "scipy==1.16.1 ; python_version >= '3.14'",
]
requires-python = ">=3.9"
authors = [{ name = "Brett Tolbert", email = "bretttolbert@gmail.com" }]
maintainers = [{ name = "Brett Tolbert", email = "bretttolbert@gmail.com" }]
description = "Verbs Completely Conjugated: machine learning conjugator for Catalan, French, Italian, Portuguese, Romanian and Spanish"
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords = [
  'verb,',
  'conjugator',
  'conjugation',
  'Catalan',
  'French',
  'Italian',
  'Portuguese',
  'Romanian',
  'Spanish',
]
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Topic :: Software Development :: Libraries :: Python Modules',
  'Topic :: Text Processing :: Linguistic',
  'Topic :: Education',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Utilities',
  'Intended Audience :: Developers',
  'Intended Audience :: End Users/Desktop',
  'Intended Audience :: Education',
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)',
  'Natural Language :: Catalan',
  'Natural Language :: French',
  'Natural Language :: Italian',
  'Natural Language :: Portuguese',
  'Natural Language :: Romanian',
  'Natural Language :: Spanish',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
]

[project.urls]
Homepage = "https://github.com/bretttolbert/verbecc"
Documentation = "https://github.com/bretttolbert/verbecc"
Repository = "https://github.com/bretttolbert/verbecc.git"
"Bug Tracker" = "https://github.com/bretttolbert/verbecc/issues"
Changelog = "https://github.com/bretttolbert/verbecc/blob/master/CHANGELOG.md"

[tool.setuptools.package-data]
trained_models = ['verbecc/data/models/*']

[tool.setuptools.packages]
find = {}

[project.scripts]
train-verb-models = 'verbecc.utils:train_models'

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
    "tests"
]
norecursedirs = [
    ".git",
    ".tox",
    "build",
    "dist",
    "venv",
    "docs",
    "__pycache__",
    "verbecc/data",
    "data"
]
addopts = [
    "--ignore=.git",
    "--ignore=.tox",
    "--ignore=build",
    "--ignore=dist",
    "--ignore=__pycache__",
    "--ignore=verbecc/data",
    "--ignore=data"
]